--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JaraweGui</title>
+  <title>Malawi data & statistics. elections, economy, stock market | jarawe. &reg; </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<nav-bar></nav-bar>
 <body>
   <app-root></app-root>
 </body>
